// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "correct place value" state correctly 1`] = `
<div
  className="bg-green-500 rounded-md text-black grid place-items-center p-2 w-10 h-10 hover:bg-cyan-100"
>
  1
</div>
`;

exports[`renders "different place value" state correctly 1`] = `
<div
  className="bg-orange-500 rounded-md text-black grid place-items-center p-2 w-10 h-10 hover:bg-cyan-100"
>
  1
</div>
`;

exports[`renders "incorrect value" state correctly 1`] = `
<div
  className="bg-slate-400 rounded-md text-black grid place-items-center p-2 w-10 h-10 hover:bg-cyan-100"
>
  1
</div>
`;

exports[`renders "no value" state correctly 1`] = `
<div
  className="bg-white rounded-md text-black grid place-items-center p-2 w-10 h-10 hover:bg-cyan-100"
/>
`;

exports[`renders "pending submission value" state correctly 1`] = `
<div
  className="bg-white rounded-md text-black grid place-items-center p-2 w-10 h-10 hover:bg-cyan-100"
>
  +
</div>
`;
